tests/conformance/positive/04-interface-definition.sml
<!-- Interface definition -->
<skill define="interface" name="unit-testing-coverage">
  A capability that analyses code and ensures adequate test coverage.
  Implementations should report coverage percentage and highlight uncovered paths.
</skill>
