tests/conformance/negative/06-interface-def-missing-name.sml
<!-- INVALID: interface definition missing name -->
<!-- Expected: ValidationError::MissingRequiredAttribute -->
<skill define="interface">
  Missing the name attribute.
</skill>
